branches/1.0.1/objects/FavoriteWikis__c.object
<CustomObject>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiPage__c</fullName>
        <label>Wiki Page</label>
        <referenceTo>WikiPage__c</referenceTo>
        <relationshipLabel>Favorite Wikis</relationshipLabel>
        <relationshipName>FavoriteWikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wiki__c</fullName>
        <label>Wiki</label>
        <referenceTo>Wiki__c</referenceTo>
        <relationshipLabel>Favorite Wikis</relationshipLabel>
        <relationshipName>Wiki</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite Wikis</label>
    <nameField>
        <label>Favorite Wikis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Wikis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>